[gd_scene load_steps=5 format=2]

[ext_resource path="res://New Game.png" type="Texture" id=1]
[ext_resource path="res://PhotoFunia-1609900440.jpg" type="Texture" id=2]
[ext_resource path="res://Credits.png" type="Texture" id=3]
[ext_resource path="res://title.gd" type="Script" id=4]

[node name="TitleScreen" type="Node"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.365, 1.117 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 280.0
margin_top = 328.0
margin_right = 743.0
margin_bottom = 580.0
size_flags_horizontal = 4
size_flags_vertical = 8
custom_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 463.0
margin_bottom = 252.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 463.0
margin_bottom = 124.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 69.0
margin_top = 128.0
margin_right = 394.0
margin_bottom = 252.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
